# high-freq-causal-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
data/: market_data.duckdb
src/: dashboard.py  main.py  run_backtest.py  setup.py
src/cpp/: bindings.cpp  order_book.cpp  order_book.hpp  pair_strategy.cpp  pair_strategy.hpp
src/engine/: backtest_runner.py  data_loader.py  storage.py
tests/: test_concurrency.py  test_strategy.py
