[project]
name = "high-freq-causal-engine"
version = "0.1.0"
description = "A high-frequency trading engine based on causal discovery."
authors = [
    {name = "Francesco D'Angolo"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "duckdb (>=1.4.4,<2.0.0)",
    "yfinance (>=1.1.0,<2.0.0)",
    "pybind11 (>=3.0.1,<4.0.0)",
    "setuptools (>=80.10.2,<81.0.0)",
    "ccxt (>=4.5.35,<5.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true